src/renderer/components/OptimizeTable/styles.module.css
.tableContainer {
  width: 100%;
  height: 100%;
  overflow: auto;
  position: relative;
}

.tableContainer table {
  position: absolute;
  display: grid;
  border-collapse: collapse;
  left: 0;
  top: 0;
  box-sizing: border-box;
  table-layout: fixed;
}

.tableContainer tr,
.tableContainer thead,
.tableContainer tbody {
  display: contents;
}

.tableContainer td,
.tableContainer th {
  border-bottom: 1px solid var(--color-table-grid);
  border-right: 1px solid var(--color-table-grid);
  overflow: hidden;
}

.tableCellContent {
  overflow: hidden;
  white-space: nowrap;
}

.tableContainer th {
  position: sticky;
  top: 0;
  user-select: none;
  padding: 0px 10px;
  height: 35px;
  line-height: 35px;
  background: var(--color-surface);
  text-align: left;
  display: flex;
  flex-direction: row;
  z-index: 10;
}

.tableHeaderIcon {
  margin-right: 5px;
  display: flex;
  align-items: center;
}

.resizer {
  position: absolute;
  right: 0;
  top: 0;
  bottom: 0;
  width: 10px;
  cursor: col-resize;
  background: var(--color-critical);
  opacity: 0;
}

.resizer:hover {
  opacity: 0.5;
}

.selectedRow td {
  background-color: var(--color-table-row-selected);
}

.newRow td {
  background-color: var(--color-table-row-new);
  color: var(--color-text);
}

.removedRow td {
  background-color: var(--color-table-row-removed);
}

